# vehicle_interfaces

./: CMakeLists.txt  LICENSE  README.md  package.xml
msg/: AllowMovement.msg  AutoEnableSpeed.msg  AutoSpeedConstant.msg  CraftsScore.msg  Distance.msg  MediaPath.msg  OdometryScore.msg  TrafficFlag.msg  VehicleControl.msg  VehicleMode.msg  VehicleSpeed.msg  VehicleSteering.msg  VehicleWheelDistance.msg
srv/: AllowVehicleMovement.srv  ResetMPC.srv  SetMPCSpeed.srv  UpdateAutoSpeed.srv  UpdateConstantSpeedRefs.srv  UpdateVehicleMode.srv
