<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_interfaces</name>
  <version>1.0.0</version>
  <description>Msgs and Srvs for vehicle features</description>
  <maintainer email="dayaguec@inf.uc3m.es">David Yagüe Cuevas</maintainer>
  <author email="dayaguec@inf.uc3m.es">David Yagüe Cuevas</author>
  <author email="lsi@uc3m.es">LSI Group</author>
  <license>BSD</license>
  <url type="repository">https://github.com/lsiteam/vehicle_interfaces</url>
  <url type="bugtracker">https://github.com/lsiteam/vehicle_interfaces/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
